<?xml version="1.0" encoding="utf-8"?>
<resources>
	
	<string name="app_name">VideoPlayer</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_search">Search</string>
	<string name="title_activity_main">MainActivity</string>
	<string name="video_title_name">Title</string>
	<string name="video_size_name">Size</string>
	<string name="video_duration_name">Duration</string>
	<string name="video_progress_name">Progress</string>
	<string name="no_video_hint">No Video!!!</string>
	
	<string name="menu_home">Home</string>
	<string name="menu_gallery">Gallery</string>
	<string name="menu_slideshow">Slideshow</string>
	<string name="menu_tools">Tools</string>
	<string name="menu_share">Share</string>
	<string name="menu_send">Send</string>
	
	<string name="title_local_video">本地视频</string>
	<string name="title_douyu">斗鱼</string>
	<string name="title_douyu_category">斗鱼分类</string>
	<string name="title_like">收藏</string>
	<string name="title_me">我的</string>
	<string name="title_tv">电视</string>
	<string name="title_movie">电影</string>
	<string name="button_allow">允许</string>
	<string name="button_deny">不允许</string>
	<string name="permission_camera_rationale">camera ration</string>
	<string name="permission_camera_never_ask_again">not again</string>
	
	<string name="delete_dialog_title">Delete</string>
	<string name="delete_dialog_message">Delete %1$s?</string>
	<string name="delete_dialog_positive">Delete</string>
	<string name="delete_dialog_negative">Cancel</string>
</resources>
